--- a/roles/wp/templates/nginx.conf.j2
+++ b/roles/wp/templates/nginx.conf.j2
@@ -30,9 +30,12 @@ http {
     client_body_timeout 10;
     send_timeout 2;
     gzip on;
-    gzip_min_length 10240;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 9;
+    gzip_buffers 16 8k;
+    gzip_min_length 1100;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_disable "msie6";
 
     include             /etc/nginx/mime.types;
